config and code update